I added an arial to fontfamily and added a font size to universal to make all font sizes to 20px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,14 @@
 /* Universal Selector */
 * {
   margin:0;
-  padding:0;  
+  padding:0; 
+  font-size: 20px; 
 }
 
 /* Element Selectors */
 body {
   position: relative;
-  font-family: "Goudy Bookletter 1911", sans-serif;
+  font-family: "Arial", "Goudy Bookletter 1911", sans-serif;
   font-size: 20px;
   background-color: #c6d4ff;
   color: #93032e;
